--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -299,12 +299,12 @@
  STATE_298:0 "リベリア"
  STATE_299:0 "フォークランド諸島"
  STATE_300:0 "ウルグアイ"
- STATE_301:0 "パラグアイ"
- STATE_302:0 "ラパス"
- STATE_303:0 "リマ"
- STATE_304:0 "パナマ"
+ STATE_301:0 "東部地方"
+ STATE_302:0 "アンデス高地"
+ STATE_303:0 "北部"
+ STATE_304:0 "東部"
  STATE_305:0 "エクアドル"
- STATE_306:0 "クンディナマルカ"
+ STATE_306:0 "太平洋低地"
  STATE_307:0 "ミランダ"
  STATE_308:0 "リーワード諸島"
  STATE_309:0 "スリナム"
@@ -484,15 +484,15 @@
  STATE_483:0 "ソノラ"
  STATE_484:0 "バハ・カリフォルニア"
  STATE_485:0 "ゲレロ"
- STATE_486:0 "メタ"
- STATE_487:0 "サンタクルス"
+ STATE_486:0 "アマゾン"
+ STATE_487:0 "東部低地"
  STATE_488:0 "ボリバル"
  STATE_489:0 "スリア"
- STATE_490:0 "パスタサ"
- STATE_491:0 "ロレト"
- STATE_492:0 "アレキパ"
- STATE_493:0 "ラ・リベルタ"
- STATE_494:0 "ウカヤリ"
+ STATE_490:0 "イキトス"
+ STATE_491:0 "西部"
+ STATE_492:0 "南部"
+ STATE_493:0 "アンデス"
+ STATE_494:0 "中部"
  STATE_495:0 "アマゾナス"
  STATE_496:0 "ミナスジェライス"
  STATE_497:0 "マラニョン"
@@ -590,10 +590,10 @@
  STATE_589:0 "東カザフスタン"
  STATE_590:0 "北カザフスタン"
  STATE_591:0 "海南"
- STATE_592:0 "茂名"
- STATE_593:0 "韶関"
+ STATE_592:0 "広東"
+ STATE_593:0 "カリブ海岸低地"
  STATE_594:0 "崇左"
- STATE_595:0 "竜岩"
+ STATE_595:0 "福建"
  STATE_596:0 "浙江"
  STATE_597:0 "済南"
  STATE_598:0 "蘇中"
@@ -686,7 +686,7 @@
  STATE_685:0 "パナマ運河地帯"
  STATE_686:0 "プエルトリコ"
  STATE_687:0 "ガイアナ"
- STATE_688:0 "北方チャコ"
+ STATE_688:0 "西部地方"
  STATE_689:0 "ジャマイカ"
  STATE_690:0 "バハマ北部"
  STATE_691:0 "トリニダード"
@@ -884,7 +884,7 @@
  STATE_883:0 "保山"
  STATE_884:0 "遵義"
  STATE_885:0 "銅仁"
- STATE_886:0 "懐化"
+ STATE_886:0 "アンデス低地"
  STATE_887:0 "内陸部"
  STATE_888:0 "チュミカン"
  STATE_889:0 "ユダヤ"
@@ -1081,10 +1081,10 @@
  STATE_1080:0 "南カリフォルニア"
  STATE_1081:0 "威海"
  STATE_1082:0 "コディアック島"
- STATE_1083:0 "漳州"
+ STATE_1083:0 "アントファガスタ"
  STATE_1084:0 "温州"
- STATE_1085:0 "三明"
- STATE_1086:0 "泉州"
+ STATE_1085:0 "タリハ"
+ STATE_1086:0 "タラパカ"
  STATE_1087:0 "南東部"
  STATE_1088:0 "南西部"
  STATE_1089:0 "砂漠地帯"
@@ -1163,10 +1163,10 @@
  STATE_1162:0 "武漢"
  STATE_1163:0 "咸寧"
  STATE_1164:0 "信陽"
- STATE_1165:0 "福州"
- STATE_1166:0 "南平"
- STATE_1167:0 "寧徳"
- STATE_1168:0 "深圳"
+ STATE_1165:0 "アクレ"
+ STATE_1166:0 "カハマルカ"
+ STATE_1167:0 "ボカ・ド・アクレ"
+ STATE_1168:0 "オリノコ"
  STATE_1169:0 "河源"
  STATE_1170:0 "ダマン"
  STATE_1171:0 "ディウ"
