大陸の州の整理の(大方)終了

--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -281,7 +281,7 @@
  STATE_280:0 "マットグロッソ"
  STATE_281:0 "モルディブ"
  STATE_282:0 "東京"
- STATE_283:0 "慶陽"
+ STATE_283:0 "河西回廊"
  STATE_284:0 "北島"
  STATE_285:0 "ニューサウスウェールズ"
  STATE_286:0 "南中部"
@@ -592,7 +592,7 @@
  STATE_591:0 "海南"
  STATE_592:0 "広東"
  STATE_593:0 "カリブ海岸低地"
- STATE_594:0 "崇左"
+ STATE_594:0 "ネグロス"
  STATE_595:0 "福建"
  STATE_596:0 "浙江"
  STATE_597:0 "済南"
@@ -606,14 +606,14 @@
  STATE_605:0 "四川"
  STATE_606:0 "安徽"
  STATE_607:0 "河南"
- STATE_608:0 "運城"
+ STATE_608:0 "臨夏"
  STATE_609:0 "冀東"
  STATE_610:0 "熱河"
  STATE_611:0 "ウランチャブ"
  STATE_612:0 "シリンゴル"
  STATE_613:0 "南京"
  STATE_614:0 "河北"
- STATE_615:0 "太原"
+ STATE_615:0 "山西"
  STATE_616:0 "寧夏"
  STATE_617:0 "アクス"
  STATE_618:0 "アルタイ"
@@ -621,7 +621,7 @@
  STATE_620:0 "湖北"
  STATE_621:0 "広州"
  STATE_622:0 "陝北"
- STATE_623:0 "ルソン"
+ STATE_623:0 "コルディリェラ"
  STATE_624:0 "セントラル諸島"
  STATE_625:0 "サマール"
  STATE_626:0 "パラワン"
@@ -747,7 +747,7 @@
  STATE_746:0 "オルドス"
  STATE_747:0 "大理"
  STATE_748:0 "畢節"
- STATE_749:0 "黄山"
+ STATE_749:0 "レイテ"
  STATE_750:0 "ノーススロープ"
  STATE_751:0 "涼山"
  STATE_752:0 "カンゼ"
@@ -872,7 +872,7 @@
  STATE_871:0 "ベイエリア"
  STATE_872:0 "チェリャビンスク"
  STATE_873:0 "アバ"
- STATE_874:0 "湛江"
+ STATE_874:0 "ボホール"
  STATE_875:0 "トゥラン"
  STATE_876:0 "ハタイ"
  STATE_877:0 "イオニア諸島"
@@ -899,7 +899,7 @@
  STATE_898:0 "聊城"
  STATE_899:0 "済源"
  STATE_900:0 "シャスタ・カスケード"
- STATE_901:0 "桂林"
+ STATE_901:0 "中部ルソン"
  STATE_902:0 "メソポタミア"
  STATE_903:0 "スエズ運河地帯"
  STATE_904:0 "北シュレースヴィヒ"
@@ -1151,23 +1151,23 @@
  STATE_1150:0 "北京"
  STATE_1151:0 "蘇南"
  STATE_1152:0 "威海衛"
- STATE_1153:0 "阜陽"
+ STATE_1153:0 "定西"
  STATE_1154:0 "チリ南部"
  STATE_1155:0 "ノルテ・チコ"
- STATE_1156:0 "南陽"
+ STATE_1156:0 "隴南"
  STATE_1157:0 "寧波"
  STATE_1158:0 "漢中"
  STATE_1159:0 "成都"
  STATE_1160:0 "淮海"
- STATE_1161:0 "玉林"
+ STATE_1161:0 "ミンドロ"
  STATE_1162:0 "武漢"
- STATE_1163:0 "咸寧"
- STATE_1164:0 "信陽"
+ STATE_1163:0 "パナイ"
+ STATE_1164:0 "天水"
  STATE_1165:0 "アクレ"
  STATE_1166:0 "カハマルカ"
  STATE_1167:0 "ボカ・ド・アクレ"
  STATE_1168:0 "オリノコ"
- STATE_1169:0 "河源"
+ STATE_1169:0 "綿陽"
  STATE_1170:0 "ダマン"
  STATE_1171:0 "ディウ"
  STATE_1172:0 "カーライッカール"
