追加されてた国家タグ、国名、国旗の整理

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -48,10 +48,6 @@
  CHI_DEF:0 "中華"
  CHI_ADJ:0 "中華"
  
- CHM:0 "チャンパーサック"
- CHM_DEF:0 "チャンパーサック"
- CHM_ADJ:0 "チャンパーサック"
- 
  CKK:0 "チュクチ"
  CKK_DEF:0 "チュクチ"
  CKK_ADJ:0 "チュクチ"
@@ -147,10 +143,6 @@
  MON:0 "モンゴル"
  MON_DEF:0 "モンゴル"
  MON_ADJ:0 "モンゴル"
- 
- NAM:0 "コーチシナ"
- NAM_DEF:0 "コーチシナ"
- NAM_ADJ:0 "コーチシナ"
  
  NEP:0 "ネパール"
  NEP_DEF:0 "ネパール"
@@ -998,6 +990,14 @@
  CCS_DEF:0 "コーカサス"
  CCS_ADJ:0 "コーカサス"
  
+ CCH:0 "コーチシナ"
+ CCH_DEF:0 "コーチシナ"
+ CCH_ADJ:0 "コーチシナ"
+ 
+ CHM:0 "チャンパーサック"
+ CHM_DEF:0 "チャンパーサック"
+ CHM_ADJ:0 "チャンパーサック"
+ 
  DAM:0 "ダマスカス"
  DAM_DEF:0 "ダマスカス"
  DAM_ADJ:0 "ダマスカス"
@@ -1258,6 +1258,10 @@
  DAL:0 "ダルマチア"
  DAL_DEF:0 "ダルマチア"
  DAL_ADJ:0 "ダルマチア"
+ 
+ FIU:0 "フィウメ"
+ FIU_DEF:0 "フィウメ"
+ FIU_ADJ:0 "フィウメ"
  
  FLN:0 "フランドル"
  FLN_DEF:0 "フランドル"
