--- a/localisation/english/countries_long_l_english.yml
+++ b/localisation/english/countries_long_l_english.yml
@@ -342,6 +342,8 @@
  TUV_republic_radical_socialism:0 "トゥヴァ人民共和国"
  TUV_republic_radical_socialism_DEF:0 "トゥヴァ人民共和国"
  
+ TIB_holy_state:0 "チベット神聖国"
+ TIB_holy_state_DEF:0 "チベット神聖国"
  TIB_state:0 "チベット国"
  TIB_state_DEF:0 "チベット国"
  
@@ -627,6 +629,8 @@
  
  HUN_kingdom:0 "ハンガリー王国"
  HUN_kingdom_DEF:0 "ハンガリー王国"
+ HUN_provisional_national_government:0 "ハンガリー臨時国民政府"
+ HUN_provisional_national_government_DEF:0 "ハンガリー臨時国民政府"
  HUN_republic:0 "ハンガリー共和国"
  HUN_republic_DEF:0 "ハンガリー共和国"
  HUN_republic_total_socialism:0 "ハンガリー人民共和国"
@@ -1381,8 +1385,14 @@
  BRN_sultanate:0 "ブルネイ・スルタン国"
  BRN_sultanate_DEF:0 "ブルネイ・スルタン国"
  
+ CCH_republic:0 "コーチシナ共和国"
+ CCH_republic_DEF:0 "コーチシナ共和国"
+ 
  CCS_republic:0 "コーカサス共和国"
  CCS_republic_DEF:0 "コーカサス共和国"
+ 
+ CHM_kingdom:0 "チャンパーサック王国"
+ CHM_kingdom_DEF:0 "チャンパーサック王国"
  
  DAM:0 "ダマスカス"
  DAM_DEF:0 "ダマスカス"
@@ -1809,6 +1819,9 @@
  DAL_kingdom:0 "ダルマチア王国"
  DAL_kingdom_DEF:0 "ダルマチア王国"
  
+ FIU_free_state:0 "フィウメ自由国"
+ FIU_free_state_DEF:0 "フィウメ自由国"
+ 
  FLN_kingdom:0 "フランドル王国"
  FLN_kingdom_DEF:0 "フランドル王国"
  FLN_republic:0 "フランドル共和国"
@@ -1884,6 +1897,8 @@
  
  SGR_confederation:0 "南ドイツ連邦"
  SGR_confederation_DEF:0 "南ドイツ連邦"
+ SGR_united_republic:0 "南ドイツ連合共和国"
+ SGR_united_republic_DEF:0 "南ドイツ連合共和国"
  
  SLA_kingdom:0 "スラボニア王国"
  SLA_kingdom_DEF:0 "スラボニア王国"
