--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -13,10 +13,6 @@
  GREENRUSSIA_empire_DEF:0 "緑ロシア帝国"
  GREENRUSSIA_empire_ADJ:0 "緑ロシア"
  
- CHM_kingdom:0 "チャンパーサック王国"
- CHM_kingdom_DEF:0 "チャンパーサック王国"
- CHM_kingdom_ADJ:0 "チャンパーサック"
- 
  CHOSON_kingdom:0 "朝鮮王国"
  CHOSON_kingdom_DEF:0 "朝鮮王国"
  CHOSON_kingdom_ADJ:0 "朝鮮"
@@ -89,14 +85,6 @@
  MUSCATandOMAN_muscat_sultanate_DEF:0 "マスカット及びオマーン・スルタン国"
  MUSCATandOMAN_muscat_sultanate_ADJ:0 "マスカット・オマーン"
  
- NAM_republic:0 "コーチシナ共和国"
- NAM_republic_DEF:0 "コーチシナ共和国"
- NAM_republic_ADJ:0 "コーチシナ"
- 
- TIBET_holy_country:0 "チベット神聖国"
- TRANSJORDAN_country_DEF:0 "チベット神聖国"
- TRANSJORDAN_country_ADJ:0 "チベット"
- 
  TRANSJORDAN_emirate:0 "トランスヨルダン首長国"
  TRANSJORDAN_emirate_DEF:0 "トランスヨルダン首長国"
  TRANSJORDAN_emirate_ADJ:0 "トランスヨルダン"
@@ -121,22 +109,10 @@
  TRANSCAUCASIAN_democratic_federative_republic_DEF:0 "トランスコーカサス民主連邦共和国"
  TRANSCAUCASIAN_democratic_federative_republic_ADJ:0 "トランスコーカサス"
  
- UNION_RUS-BLR:0 "ロシア・ベラルーシ連盟国"
- UNION_RUS-BLR_DEF:0 "ロシア・ベラルーシ連盟国"
- UNION_RUS-BLR_ADJ:0 "連盟国"
- 
 #ヨーロッパ
  AUS-HUN_monarchy:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
  AUS-HUN_monarchy_DEF:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
  AUS-HUN_monarchy_ADJ:0 "オーストリア＝ハンガリー"
- 
- DAN_united_republic:0 "ドナウ連邦共和国"
- DAN_united_republic_DEF:0 "ドナウ連邦共和国"
- DAN_united_republic_ADJ:0 "ドナウ"
- 
- SGR_united_republic:0 "南ドイツ連合共和国"
- SGR_united_republic_DEF:0 "南ドイツ連合共和国"
- SGR_united_republic_ADJ:0 "南ドイツ"
  
  BATAVIA_republic:0 "バタビア共和国"
  BATAVIA_republic_DEF:0 "バタビア共和国"
@@ -173,6 +149,10 @@
  BOHEMIAandMORAVIA_united_kingdom:0 "ボヘミア及びモラヴィア連合王国"
  BOHEMIAandMORAVIA_united_kingdom_DEF:0 "ボヘミア及びモラヴィア連合王国"
  BOHEMIAandMORAVIA_united_kingdom_ADJ:0 "ボヘミア・モラヴィア"
+ 
+ CARNARO_ITA_regency:0 "カルナーロ・イタリア執政府"
+ CARNARO_ITA_regency_DEF:0 "カルナーロ・イタリア執政府"
+ CARNARO_ITA_regency_ADJ:0 "カルナーロ"
  
  CHURCH_state:0 "教会国"
  CHURCH_state_DEF:0 "教会国"
@@ -217,6 +197,10 @@
  CZEandSLO_republic_radical_socialism:0 "チェコ及びスロバキア社会主義連邦共和国"
  CZEandSLO_republic_radical_socialism_DEF:0 "チェコ及びスロバキア社会主義連邦共和国"
  CZEandSLO_federative_republic_ADJ:0 "チェコ・スロバキア"
+ 
+ DANUBE_united_republic:0 "ドナウ連合共和国"
+ DANUBE_united_republic_DEF:0 "ドナウ連合共和国"
+ DANUBE_united_republic_ADJ:0 "ドナウ"
  
  ENG-GBR_commonwealth:0 "グレートブリテン共和国"
  ENG-GBR_commonwealth_DEF:0 "グレートブリテン共和国"
@@ -295,9 +279,9 @@
  HOLY-MOUNTAIN_autonomous_monastic_state_DEF:0 "聖なる山自治修道士国"
  HOLY-MOUNTAIN_autonomous_monastic_state_ADH:0 "聖なる山"
  
- HUN_provisional_national_government:0 "ハンガリー臨時国民政府"
- HUN_provisional_national_government_DEF:0 "ハンガリー臨時国民政府"
- HUN_provisional_national_government_ADH:0 "ハンガリー"
+ IBERIA_anarchist_federation:0 "イベリア・アナーキスト連盟"
+ IBERIA_anarchist_federation_DEF:0 "イベリア・アナーキスト連盟"
+ IBERIA_anarchist_federation_ADJ:0 "イベリア"
  
  IREandGBR_united_kingdom:0 "アイルランド及びグレートブリテン連合王国"
  IREandGBR_united_kingdom_DEF:0 "アイルランド及びグレートブリテン連合王国"
@@ -338,6 +322,10 @@
  PORandBRA_united_kingdom:0 "ポルトガル及びブラジル連合王国"
  PORandBRA_united_kingdom_DEF:0 "ポルトガル及びブラジル連合王国"
  PORandBRA_united_kingdom_ADJ:0 "ポルトガル・ブラジル"
+ 
+ RUSandBLR_union_state:0 "ロシア及びベラルーシ連合国"
+ RUSandBLR_union_state_DEF:0 "ロシア及びベラルーシ連合国"
+ RUSandBLR_union_state_ADJ:0 "ロシア・ベラルーシ"
  
  SCO-GBR_kingdom:0 "グレートブリテン王国"
  SCO-GBR_kingdom_DEF:0 "グレートブリテン王国"
@@ -756,6 +744,10 @@
  GLR_anarchy_ADJ:0 "五大湖地域"
  
 #その他
+ ETH-ISR_state:0 "エチオピア＝イスラエル国"
+ ETH-ISR_state_DEF:0 "エチオピア＝イスラエル国"
+ ETH-ISR_state_ADJ:0 "エチオピア＝イスラエル"
+ 
  RATE:0 "レーテ"
  RATE_DEF:0 "レーテ"
  RATE_ADJ:0 "レーテ"
@@ -763,3 +755,7 @@
  TANACS:0 "タナーチ"
  TANACS_DEF:0 "タナーチ"
  TANACS_ADJ:0 "タナーチ"
+ 
+ MAKHNOVSHCHINA:0 "マフノフシチナ"
+ MAKHNOVSHCHINA_DEF:0 "マフノフシチナ"
+ MAKHNOVSHCHINA_ADJ:0 "マフノフシチナ"
