--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -17,6 +17,16 @@
  VICTORY_POINTS_12031:0 "神戸"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_10344:0 "プローム"
+ VICTORY_POINTS_12292:0 "メルギー"
+ VICTORY_POINTS_1315:0 "タヴォイ"
+ VICTORY_POINTS_12090:0 "アキャブ"
+ VICTORY_POINTS_12449:0 "メイッティーラ"
+ VICTORY_POINTS_10386:0 "モンユワ"
+ VICTORY_POINTS_7254:0 "パテイン"
+ VICTORY_POINTS_12127:0 "バゴー"
+ VICTORY_POINTS_1403:0 "モーラミャイン"
+ VICTORY_POINTS_4626:0 "ネピドー"
  VICTORY_POINTS_7868:0 "尼港"
  VICTORY_POINTS_10411:0 "ムアンナコーンサワン"
  VICTORY_POINTS_10398:0 "ピッサヌローク"
