細かな修正

--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -60,7 +60,7 @@
  LOADING_TIP_58: "我ニ追イツク敵機無シ\n- 彩雲の電文"
  LOADING_TIP_59: "一歩も下がるな!\n- ソ連国防人民委員令第227号"
  LOADING_TIP_60: "皇国ノ興廃此ノ一戦ニ在リ、各員一層奮励努力セヨ\n- 東郷 平八郎"
- LOADING_TIP_61: "英国は各員がその義務を尽くすことを期待する\n- ホレーショ・ネルソン"
+ LOADING_TIP_61: "英国は各員がその義務を尽くすことを期待する。\n- ホレーショ・ネルソン"
  LOADING_TIP_62: "欲しがりません勝つまでは\n- 戦時標語"
  LOADING_TIP_63: "ぜいたくは敵だ！\n- 戦時標語"
  LOADING_TIP_64: "世の中に寛容の形態は3種類存在する。1つは誠実な寛容、1つは不誠実な寛容、そして混沌だ。\n- ベルリン攻防戦中にソ連軍兵士が発見したドイツ兵の手記より"
@@ -69,16 +69,16 @@
  LOADING_TIP_67: "大衆の考える最も身近な恐怖は変化することである。\n- ウィンストン・チャーチル"
  LOADING_TIP_68: "不誠実な人間が真実を言ったところで返ってくるのは失笑だけだ。\n- ウェンデル・L・ウィルキー"
  LOADING_TIP_69: "大統領。私の母は、スペインなのです。\n- ホセ・アントニオ・プリモ・デ・リベラ"
- LOADING_TIP_70: "老兵は死なず、ただ消え去るのみ\n- ダグラス・マッカーサー"
- LOADING_TIP_71: "近衛首相にはその気迫はあるまい\n- 杉山 元"
+ LOADING_TIP_70: "老兵は死なず、ただ消え去るのみ。\n- ダグラス・マッカーサー"
+ LOADING_TIP_71: "近衛首相にはその気迫はあるまい。\n- 杉山 元"
  LOADING_TIP_72: "さあ行こう!\n- ユーリイ・ガガーリン"
- LOADING_TIP_73: "地球は青かった\n- ユーリイ・ガガーリン"
- LOADING_TIP_74: "神はいなかった\n- ユーリイ・ガガーリン"
+ LOADING_TIP_73: "地球は青かった。\n- ユーリイ・ガガーリン"
+ LOADING_TIP_74: "神はいなかった。\n- ユーリイ・ガガーリン"
  LOADING_TIP_75: "日本兵士よ。脱走しなさい。私が日本に帰れるようにしてあげます。\n- 野坂 参三"
  LOADING_TIP_76: "全ての人間の全ての人間に対するかのような闘争\n- 『リヴァイアサン』"
  LOADING_TIP_77: "我々もまたあなた方アメリカ国民の覇権主義に対し今まで以上に強く戦います。\n- 鈴木　貫太郎"
- LOADING_TIP_78: "「英米本位の平和主義を排す」\n- 近衛　文麿"
- LOADING_TIP_79: "日本はこんなに勝っているのか\n- 小磯　國昭"
+ LOADING_TIP_78: "英米本位の平和主義を排す。\n- 近衛　文麿"
+ LOADING_TIP_79: "日本はこんなに勝っているのか。\n- 小磯　國昭"
  LOADING_TIP_80: "たぶん、歴代の朝鮮総督のうち、ご覧のとおり私が一番の醜男だ。\n- 小磯　國昭"
  LOADING_TIP_81: "ベルギーは道ではない。国だ!\n- 軍人の王"
  LOADING_TIP_82: "明石元二郎一人で、満州の日本軍20万人に匹敵する戦果を上げている。\n- ヴィルヘルム2世"
