フエゴからフェルナンド・ポーへ

--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -891,7 +891,7 @@
  STATE_890:0 "アマザル"
  STATE_891:0 "トゥグロ"
  STATE_892:0 "シーサンパンナ"
- STATE_893:0 "フエゴ"
+ STATE_893:0 "フェルナンド・ポー"
  STATE_894:0 "ジョホール"
  STATE_895:0 "関東州"
  STATE_896:0 "エリー"
