--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -432,7 +432,8 @@
  VICTORY_POINTS_2211:0 "ダニーデン"
  VICTORY_POINTS_4543:0 "オークランド"
  VICTORY_POINTS_1349:0 "ボンベイ"
- VICTORY_POINTS_2086:0 "デリー"
+ VICTORY_POINTS_2086:0 "ニューデリー"
+ VICTORY_POINTS_12708:0 "シムラー"
  VICTORY_POINTS_4245:0 "カルカッタ"
  VICTORY_POINTS_10278:0 "マドラス"
  VICTORY_POINTS_4987:0 "カトマンドゥ"
