--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -93,7 +93,7 @@
  LOADING_TIP_91: "大国に頼りきることは大国を敵にするのと同じくらい危険なことだ。\n- カール・グスタフ・エミール・マンネルヘイム"
  LOADING_TIP_92: "足元を踏みしめる大地のみならず、岸辺を洗う湖水のみならず、頭上にざわめく大空も我が祖国である。\n- カール・グスタフ・エミール・マンネルヘイム"
  LOADING_TIP_93: "我々は奪われたものを奪い返す。\n- ウラジーミル・レーニン"
- LOADING_TIP_94: "\n- "
+ LOADING_TIP_94: "自分の守護者から自分を守ってくれるのは誰なのか？\n- デキムス・ユニウス・ユウェナリス"
  LOADING_TIP_95: "\n- "
  LOADING_TIP_96: "\n- "
  LOADING_TIP_97: "\n- "
