欧州連合関係

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1259,6 +1259,10 @@
  DAL_DEF:0 "ダルマチア"
  DAL_ADJ:0 "ダルマチア"
  
+ EUR:0 "ヨーロッパ"
+ EUR_DEF:0 "ヨーロッパ"
+ EUR_ADJ:0 "ヨーロッパ"
+ 
  FIU:0 "フィウメ"
  FIU_DEF:0 "フィウメ"
  FIU_ADJ:0 "フィウメ"
