--- a/localisation/english/countries_long_l_english.yml
+++ b/localisation/english/countries_long_l_english.yml
@@ -1811,6 +1811,9 @@
  DAL_kingdom:0 "ダルマチア王国"
  DAL_kingdom_DEF:0 "ダルマチア王国"
  
+ EUR_union:0 "ヨーロッパ連合"
+ EUR_union_DEF:0 "ヨーロッパ連合"
+ 
  FIU_free_state:0 "フィウメ自由国"
  FIU_free_state_DEF:0 "フィウメ自由国"
  
