南トルキスタン、アブハジア王国、アブハジア公国、アンドラ共和国の追加

--- a/localisation/english/countries_long_l_english.yml
+++ b/localisation/english/countries_long_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
 #アジア
+ ABK_kingdom:0 "アブハジア王国"
+ ABK_kingdom_DEF:0 "アブハジア王国"
+ ABK_principality:0 "アブハジア公国"
+ ABK_principality_DEF:0 "アブハジア公国"
  ABK_republic:0 "アブハジア共和国"
  ABK_republic_DEF:0 "アブハジア共和国"
  
@@ -420,8 +424,6 @@
  AUS_federal_state_DEF:0 "オーストリア連邦国"
  AUS_republic:0 "オーストリア共和国"
  AUS_republic_DEF:0 "オーストリア共和国"
- AUS_GER_republic:0 "ドイツ・オーストリア共和国"
- AUS_GER_republic_DEF:0 "ドイツ・オーストリア共和国"
  
  BAY_duchy:0 "バイエルン公国"
  BAY_duchy_DEF:0 "バイエルン公国"
@@ -1698,6 +1700,9 @@
  SRW_republic:0 "サラワク共和国"
  SRW_republic_DEF:0 "サラワク共和国"
  
+ STR_republic:0 "南トルキスタン共和国"
+ STR_republic_DEF:0 "南トルキスタン共和国"
+ 
  SUY_minguo:0 "綏遠民国"
  SUY_minguo_DEF:0 "綏遠民国"
  SUY_republic:0 "綏遠共和国"
@@ -1788,6 +1793,8 @@
  ADR_kingdom_DEF:0 "アンドラ王国"
  ADR_principality:0 "アンドラ公国"
  ADR_principality_DEF:0 "アンドラ公国"
+ ADR_republic:0 "アンドラ共和国"
+ ADR_republic_DEF:0 "アンドラ共和国"
  
  ALA_republic:0 "オーランド共和国"
  ALA_republic_DEF:0 "オーランド共和国"
