--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1182,6 +1182,10 @@
  SRW_DEF:0 "サラワク"
  SRW_ADJ:0 "サラワク"
  
+ STR:0 "南トルキスタン"
+ STR_DEF:0 "南トルキスタン"
+ STR_ADJ:0 "南トルキスタン"
+ 
  SUY:0 "綏遠"
  SUY_DEF:0 "綏遠"
  SUY_ADJ:0 "綏遠"
