傀儡化ディシジョンの再構築-実装国家はスプレッドシート参照

--- a/localisation/english/_geacps_release_l_english.yml
+++ b/localisation/english/_geacps_release_l_english.yml
@@ -1,23 +1,80 @@
 ﻿l_english:
+ fate_of.0:0 "従順な国家を樹立"
+ fate_of.1:0 "我々の領土を回収"
+ 
+ release_ABA:0 "アラバマの運命"
+ fate_of_ABA.1.t:0 "$release_ABA$"
+ fate_of_ABA.1.d:0 ""
+ fate_of_ABA.1.0:0 "$fate_of.0$"
+ fate_of_ABA.2.t:0 "$release_ABA$"
+ fate_of_ABA.2.d:0 ""
+ fate_of_ABA.2.0:0 "共和国として解放"
+ fate_of_ABA.2.1:0 "南部アメリカの主たる連合国を！"
+ fate_of_ABA.2.2:0 "合衆国の復活"
+ 
+ release_ABK:0 "アブハジアの運命"
+ fate_of_ABK.1.t:0 "$release_ABK$"
+ fate_of_ABK.1.d:0 ""
+ fate_of_ABK.1.0:0 "$fate_of.0$"
+ fate_of_ABK.2.t:0 "$release_ABK$"
+ fate_of_ABA.2.d:0 ""
+ fate_of_ABK.2.0:0 "王国として解放"
+ fate_of_ABK.2.1:0 "公国として解放"
+ fate_of_ABK.2.2:0 "共和国として解放"
+ fate_of_ABK.2.3:0 "アブハジアはソビエト一部であろう?"
+ 
+ release_ADR:0 "アンドラの運命"
+ fate_of_ADR.1.t:0 "$release_ADR$"
+ fate_of_ADR.1.d:0 ""
+ fate_of_ADR.1.0:0 "$fate_of.0$"
+ fate_of_ABA.2.d:0 ""
+ fate_of_ADR.2.t:0 "$release_ADR$"
+ fate_of_ADR.2.0:0 "王国として解放"
+ fate_of_ADR.2.1:0 "公国として解放"
+ fate_of_ADR.2.2:0 "共和国として解放"
+ fate_of_ADR.2.t:0 "$release_ADR$"
+ 
+ release_ADU:0 "アンダルシアの運命"
+ fate_of_ADU.1.t:0 "$release_ADU$"
+ fate_of_ADU.1.d:0 ""
+ fate_of_ADU.1.0:0 "$fate_of.0$"
+ fate_of_ADU.2.t:0 "$release_ADU$"
+ fate_of_ABA.2.d:0 ""
+ fate_of_ADU.2.0:0 "共和国として解放"
+ fate_of_ADU.2.1:0 "グレナダ首長国の復古を"
+ fate_of_ADU.3.t:0 "$release_ADU$"
+ fate_of_ABA.3.d:0 ""
+ fate_of_ADU.3.0:0 "ナスル朝グラナダ王国時代の領土を与えよ"
+ fate_of_ADU.3.1:0 "アンダルシア全域の領土を与えよ"
+ 
  release_AFG:0 "アフガニスタンの運命"
- fate_of_AFG.1.t:0 "アフガニスタンの運命"
- fate_of_AFG.1.d:0 "占領したアフガニスタン地域をどのようにすべきだろうか。"
- fate_of_AFG.1.0:0 "アフガニスタン地域のみに従順な国家を"
- fate_of_AFG.1.1:0 "大アフガニスタンに従順な国家を"
- fate_of_AFG.1.2:0 "友に分け与えよう！"
- fate_of_AFG.1.3:0 "アフガニスタンは我が領土である"
- fate_of_AFG.2.t:0 "アフガニスタンの運命-政体"
- fate_of_AFG.2.d:0 "解放する国家はどのような政体が良いだろうか。"
+ fate_of_AFG.1.t:0 "$release_AFG$"
+ fate_of_AFG.1.d:0 ""
+ fate_of_AFG.1.0:0 "$fate_of.0$"
+ fate_of_AFG.2.t:0 "$release_AFG$"
+ fate_of_AFG.2.d:0 ""
  fate_of_AFG.2.0:0 "王国として解放"
  fate_of_AFG.2.1:0 "首長国として解放"
  fate_of_AFG.2.2:0 "共和国として解放"
  fate_of_AFG.2.3:0 "イスラム共和国として解放"
  fate_of_AFG.2.4:0 "アフガニスタンはソビエト一部であろう?"
- fate_of_AFG.3.t:0 "アフガニスタンの運命-分割"
- fate_of_AFG.3.d:0 "アフガニスタン地域をどのように与えるべきだろうか"
- fate_of_AFG.3.0:0 "全土を$IND$に与えよう"
- fate_of_AFG.3.1:0 "全土を$PAK$に与えよう"
- fate_of_AFG.3.2:0 "全土を$PER$に与えよう"
+ fate_of_AFG.3.t:0 "$release_AFG$\n南トルキスタン問題"
+ fate_of_AFG.3.d:0 ""
+ fate_of_AFG.3.0:0 "バダフシャーン北部を含めずアフガニスタンに"
+ fate_of_AFG.3.1:0 "バダフシャーン北部を含めて全域をアフガニスタンに"
+ fate_of_AFG.3.2:0 "ここはアフガニスタンではないだろう"
+ fate_of_AFG.4.t:0 "$release_AFG$\nバローチスタン問題"
+ fate_of_AFG.4.d:0 ""
+ fate_of_AFG.4.0:0 "北部のみをアフガニスタンに"
+ fate_of_AFG.4.1:0 "北部と西部をアフガニスタンに"
+ fate_of_AFG.4.2:0 "全域をアフガニスタンに"
+ fate_of_AFG.4.3:0 "ここはアフガニスタンではないだろう"
+ fate_of_AFG.5.t:0 "$release_AFG$\nインド問題"
+ fate_of_AFG.5.d:0 ""
+ fate_of_AFG.5.0:0 "パシュトゥーニスタンは与えよ"
+ fate_of_AFG.5.1:0 "カシミール以外のイスラム教徒の土地を"
+ fate_of_AFG.5.2:0 "全てのイスラム教徒の土地を"
+ fate_of_AFG.5.3:0 "ここはアフガニスタンではないだろう"
  
  release_ARM:0 "アルメニアの運命"
  fate_of_ARM.1.t:0 "アルメニアの運命"
@@ -90,15 +147,6 @@
  fate_of_BRM.3.t:0 "ビルマの運命-分割"
  fate_of_BRM.3.d:0 "ビルマ地域をどのように与えるべきだろうか"
  fate_of_BRM.3.0:0 "全土を$IND$に与えよう"
- 
- fate_of_ADU.1.t:0 "アンダルシアの運命"
- fate_of_ADU.1.d:0 "占領したアンダルシア地域をどのようにすべきだろうか。"
- fate_of_ADU.1.0:0 "ナスル朝グラナダ王国時代の形で解放せよ"
- fate_of_ADU.1.1:0 "アンダルシア全域に従順な国家を"
- fate_of_ADU.2.t:0 "アンダルシアの運命-政体"
- fate_of_ADU.2.d:0 "解放する国家はどのような政体がよいだろうか？"
- fate_of_ADU.2.0:0 "共和国として解放"
- fate_of_ADU.2.1:0 "グレナダ首長国の復古を"
  
  release_ALB:0 "アルバニアの運命"
  fate_of_ALB.1.t:0 "アルバニアの運命"
