--- a/localisation/english/countries_long_l_english.yml
+++ b/localisation/english/countries_long_l_english.yml
@@ -648,14 +648,10 @@
  
  ITA_kingdom:0 "イタリア王国"
  ITA_kingdom_DEF:0 "イタリア王国"
- ITA_kingdom_bonaparte:0 "イタリア王国"
- ITA_kingdom_bonaparte_DEF:0 "イタリア王国"
  ITA_republic:0 "イタリア共和国"
  ITA_republic_DEF:0 "イタリア共和国"
  ITA_republic_national_populism:0 "イタリア社会共和国"
  ITA_republic_national_populism_DEF:0 "イタリア社会共和国"
- ITA_republic_bonaparte:0 "イタリア共和国"
- ITA_republic_bonaparte_DEF:0 "イタリア共和国"
  
  KAL_republic:0 "カルムイク共和国"
  KAL_republic_DEF:0 "カルムイク共和国"
@@ -899,7 +895,6 @@
  
  WGR_republic:0 "西ドイツ共和国"
  WGR_republic_DEF:0 "西ドイツ共和国"
- WGR_republic_ADJ:0 "西ドイツ"
  
  WLS_duchy:0 "ウェールズ公国"
  WLS_duchy_DEF:0 "ウェールズ公国"
@@ -1031,7 +1026,7 @@
  GNA_republic_DEF:0 "ギニア共和国"
  
  GNB_republic:0 "ギニアビサウ共和国"
- GNB_republic_DEG:0 "ギニアビサウ共和国"
+ GNB_republic_DEF:0 "ギニアビサウ共和国"
  
  IVO_republic:0 "コートジボワール共和国"
  IVO_republic_DEF:0 "コートジボワール共和国"
