国名の追加

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -121,6 +121,10 @@
  THAILAND_kingdom_DEF:0 "タイ王国"
  THAILAND_kingdom_ADJ:0 "タイ"
  
+ TRANSBAIKAL_cossack_republic:0 "トランスバイカル・コサック共和国"
+ TRANSBAIKAL_cossack_republic_DEF:0 "トランスバイカル・コサック共和国"
+ TRANSBAIKAL_cossack_republic_ADJ:0 "トランスバイカル"
+ 
  TRANSBAIKAL_republic:0 "トランスバイカル共和国"
  TRANSBAIKAL_republic_DEF:0 "トランスバイカル共和国"
  TRANSBAIKAL_republic_ADJ:0 "トランスバイカル"
