--- a/localisation/english/countries_long_l_english.yml
+++ b/localisation/english/countries_long_l_english.yml
@@ -91,6 +91,8 @@
  
  CHI_empire:0 "中華帝国"
  CHI_empire_DEF:0 "中華帝国"
+ CHI_kingdom:0 "中華王国"
+ CHI_kingdom_DEF:0 "中華王国"
  CHI_minguo:0 "中華民国"
  CHI_minguo_DEF:0 "中華民国"
  CHI_minguo_provisional_government:0 "中華民国臨時政府"
@@ -535,6 +537,8 @@
  DNZ_free_city:0 "自由都市ダンツィヒ"
  DNZ_free_city_DEF:0 "自由都市ダンツィヒ"
  
+ DON_cossack_republic:0 "ドン・コサック共和国"
+ DON_cossack_republic_DEF:0 "ドン・コサック共和国"
  DON_republic:0 "ドン共和国"
  DON_republic_DEF:0 "ドン共和国"
  
@@ -675,6 +679,8 @@
  KSH_republic:0 "カシュビア共和国"
  KSH_republic_DEF:0 "カシュビア共和国"
  
+ KUB_cossack_republic:0 "クバン・コサック共和国"
+ KUB_cossack_republic_DEF:0 "クバン・コサック共和国"
  KUB_peoples_republic:0 "クバン人民共和国"
  KUB_peoples_republic_DEF:0 "クバン人民共和国"
  KUB_republic:0 "クバン共和国"
@@ -1353,6 +1359,8 @@
  ANH_warlord:0 "安徽軍閥"
  ANH_warlord_DEF:0 "安徽軍閥"
  
+ AMR_cossack_republic:0 "アムール・コサック共和国"
+ AMR_cossack_republic_DEF:0 "アムール・コサック共和国"
  AMR_republic:0 "アムール共和国"
  AMR_republic_DEF:0 "アムール共和国"
  
@@ -1884,6 +1892,8 @@
  SHN_republic:0 "セントヘレナ共和国"
  SHN_republic_DEF:0 "セントヘレナ共和国"
  
+ SIB_cossack_republic:0 "シベリア・コサック共和国"
+ SIB_cossack_republic_DEF:0 "シベリア・コサック共和国"
  SIB_republic:0 "シベリア共和国"
  SIB_republic_DEF:0 "シベリア共和国"
  
@@ -2166,8 +2176,8 @@
  CLD_republic:0 "コロラド共和国"
  CLD_republic_DEF:0 "コロラド共和国"
  
-#CLU:0 "ワシントン・コロンビア"
-#CLU_DEF:0 "ワシントン・コロンビア"
+ CLU_free_city:0 "コロンビア自由都市"
+ CLU_free_city_DEF:0 "コロンビア自由都市"
  
  CNT_republic:0 "コネチカット共和国"
  CNT_republic_DEF:0 "コネチカット共和国"
