--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -321,7 +321,7 @@
  STATE_320:0 "ポンディシェリ"
  STATE_321:0 "ゴア"
  STATE_322:0 "ナクチュ"
- STATE_323:0 "ネパール"
+ STATE_323:0 "中部開発区域"
  STATE_324:0 "ブータン"
  STATE_325:0 "昆明"
  STATE_326:0 "香港"
@@ -420,26 +420,26 @@
  STATE_419:0 "タブリーズ"
  STATE_420:0 "ギーラーン"
  STATE_421:0 "クルディスタン"
- STATE_422:0 "セイロン島"
+ STATE_422:0 "西部"
  STATE_423:0 "タミル・ナードゥ"
  STATE_424:0 "アーンドラ・プラデーシュ"
  STATE_425:0 "カルナータカ"
  STATE_426:0 "オリッサ"
  STATE_427:0 "テランガーナ"
  STATE_428:0 "グジャラート"
- STATE_429:0 "ムンバイ"
+ STATE_429:0 "マハーラーシュトラ"
  STATE_430:0 "中央ベンガル"
  STATE_431:0 "西ベンガル"
  STATE_432:0 "アッサム"
  STATE_433:0 "ラージャスターン"
  STATE_434:0 "アルナーチャル・プラデーシュ"
- STATE_435:0 "パトナー"
- STATE_436:0 "ジャバルプル"
+ STATE_435:0 "西部開発区域"
+ STATE_436:0 "チャッティースガル"
  STATE_437:0 "マディヤ・プラデーシュ"
- STATE_438:0 "ラクナウ"
+ STATE_438:0 "ウッタル・プラデーシュ"
  STATE_439:0 "ハリヤーナー"
  STATE_440:0 "ラホール"
- STATE_441:0 "カシミール"
+ STATE_441:0 "ジャンムー・カシミール"
  STATE_442:0 "カイバル・パクトゥンクワ"
  STATE_443:0 "シンド"
  STATE_444:0 "バローチスターン"
@@ -857,15 +857,15 @@
  STATE_856:0 "ベイノイ"
  STATE_857:0 "カウキー"
  STATE_858:0 "シャルダラ"
- STATE_859:0 "バリパダ"
- STATE_860:0 "シワン"
+ STATE_859:0 "メーガーラヤ"
+ STATE_860:0 "ラダック"
  STATE_861:0 "ジャールカンド"
- STATE_862:0 "アラー"
+ STATE_862:0 "東部開発区域"
  STATE_863:0 "シンガポール"
  STATE_864:0 "シャン"
  STATE_865:0 "チャンディーガル"
- STATE_866:0 "ナーグプル"
- STATE_867:0 "キシャンガンジ"
+ STATE_866:0 "ナガランド"
+ STATE_867:0 "中部"
  STATE_868:0 "烏蘭烏拉"
  STATE_869:0 "スルハンダリヤ"
  STATE_870:0 "カシュカダリヤ"
@@ -1071,11 +1071,11 @@
  STATE_1070:0 "ジャンブール"
  STATE_1071:0 "林芝"
  STATE_1072:0 "索"
- STATE_1073:0 "ヴィシャーカパトナム"
+ STATE_1073:0 "ミゾラム"
  STATE_1074:0 "ウッタラーカンド"
  STATE_1075:0 "ヒマーチャル・プラデーシュ"
- STATE_1076:0 "アーディラーバード"
- STATE_1077:0 "ジャグダルプル"
+ STATE_1076:0 "マニプル"
+ STATE_1077:0 "南部"
  STATE_1078:0 "サンホアキンバレー"
  STATE_1079:0 "シエラネバダ山脈"
  STATE_1080:0 "南カリフォルニア"
@@ -1258,7 +1258,7 @@
  STATE_1257:0 "メコンデルタ"
  STATE_1258:0 "サイニャブーリー"
  STATE_1259:0 "南ベンガル"
- STATE_1260:0 "ダルバンガ"
+ STATE_1260:0 "ビハール"
  STATE_1261:0 "天津"
  STATE_1262:0 "上海"
  STATE_1263:0 "廈門"
