--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -17,6 +17,33 @@
  VICTORY_POINTS_12031:0 "神戸"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_7565:0 "マルダ"
+ VICTORY_POINTS_12395:0 "シロン"
+ VICTORY_POINTS_1497:0 "トゥラ"
+ VICTORY_POINTS_7574:0 "ラーイプル"
+ VICTORY_POINTS_4883:0 "ナーグプル"
+ VICTORY_POINTS_7013:0 "ナーシク"
+ VICTORY_POINTS_7060:0 "アウランガーバード"
+ VICTORY_POINTS_12338:0 "ダージリン"
+ VICTORY_POINTS_11995:0 "ボーパール"
+ VICTORY_POINTS_12080:0 "インドール"
+ VICTORY_POINTS_1359:0 "グルバルガ"
+ VICTORY_POINTS_7260:0 "コロンボ"
+ VICTORY_POINTS_1377:0 "シャージャハーンプル"
+ VICTORY_POINTS_12452:0 "ダーンバード"
+ VICTORY_POINTS_7395:0 "シモガ"
+ VICTORY_POINTS_12146:0 "マンディヤ"
+ VICTORY_POINTS_10255:0 "ヴィシャカパトナム"
+ VICTORY_POINTS_1228:0 "エッロール"
+ VICTORY_POINTS_10259:0 "ラーヤチュール"
+ VICTORY_POINTS_4315:0 "マイスール"
+ VICTORY_POINTS_1409:0 "マドゥライ"
+ VICTORY_POINTS_10066:0 "サヒワル"
+ VICTORY_POINTS_8007:0 "バハーワルプル"
+ VICTORY_POINTS_7903:0 "ラヒームヤール・ハーン"
+ VICTORY_POINTS_1971:0 "サッカル"
+ VICTORY_POINTS_7084:0 "ナワーブシャー"
+ VICTORY_POINTS_4110:0 "ハイデラバード"
  VICTORY_POINTS_10344:0 "プローム"
  VICTORY_POINTS_12292:0 "メルギー"
  VICTORY_POINTS_1315:0 "タヴォイ"
@@ -432,7 +459,7 @@
  VICTORY_POINTS_2211:0 "ダニーデン"
  VICTORY_POINTS_4543:0 "オークランド"
  VICTORY_POINTS_1349:0 "ボンベイ"
- VICTORY_POINTS_2086:0 "ニューデリー"
+ VICTORY_POINTS_2086:0 "デリー"
  VICTORY_POINTS_12708:0 "シムラー"
  VICTORY_POINTS_4245:0 "カルカッタ"
  VICTORY_POINTS_10278:0 "マドラス"
