コサック共和国の整理

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1375,6 +1375,10 @@
  WLL_DEF:0 "ワロン"
  WLL_ADJ:0 "ワロン"
  
+ ZAP:0 "ザポロージャ"
+ ZAP_DEF:0 "ザポロージャ"
+ ZAP_ADJ:0 "ザポロージャ"
+ 
 #アフリカ
  ASH:0 "アシャンティ"
  ASH_DEF:0 "アシャンティ"
