--- a/localisation/english/countries_long_l_english.yml
+++ b/localisation/english/countries_long_l_english.yml
@@ -889,6 +889,8 @@
  UDM_republic:0 "ウドムルト共和国"
  UDM_republic_DEF:0 "ウドムルト共和国"
  
+ UKR_cossack_republic:0 "ウクライナ・コサック共和国"
+ UKR_cossack_republic_DEF:0 "ウクライナ・コサック共和国"
  UKR_peoples_republic:0 "ウクライナ人民共和国"
  UKR_peoples_republic_DEF:0 "ウクライナ人民共和国"
  UKR_republic:0 "ウクライナ共和国"
@@ -1359,8 +1361,6 @@
  ANH_warlord:0 "安徽軍閥"
  ANH_warlord_DEF:0 "安徽軍閥"
  
- AMR_cossack_republic:0 "アムール・コサック共和国"
- AMR_cossack_republic_DEF:0 "アムール・コサック共和国"
  AMR_republic:0 "アムール共和国"
  AMR_republic_DEF:0 "アムール共和国"
  
@@ -1932,6 +1932,11 @@
  WLL_kingdom_DEF:0 "ワロン王国"
  WLL_republic:0 "ワロン共和国"
  WLL_republic_DEF:0 "ワロン共和国"
+ 
+ ZAP_cossack_republic:0 "ザポロージャ・コサック共和国"
+ ZAP_cossack_republic_DEF:0 "ザポロージャ・コサック共和国"
+ ZAP_republic:0 "ザポロージャ共和国"
+ ZAP_republic_DEF:0 "ザポロージャ共和国"
  
 #アフリカ
  ASH_empire:0 "アシャンティ帝国"
