--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -370,6 +370,10 @@
  NETHERLANDS_united_kingdom_DEF:0 "ネーデルラント王国"
  NETHERLANDS_united_kingdom_ADJ:0 "オランダ"
  
+ NEWRUSSIA_peoples_republics_union:0 "ノヴォロシア人民共和国連合"
+ NEWRUSSIA_peoples_republics_union_DEF:0 "ノヴォロシア人民共和国連合"
+ NEWRUSSIA_peoples_republics_union_ADJ:0 "ノヴォロシア"
+ 
  POL_kingdom_and_LIT_grand_duchy:0 "ポーランド王国及びリトアニア大公国"
  POL_kingdom_and_LIT_grand_duchy_DEF:0 "ポーランド王国及びリトアニア大公国"
  POL_kingdom_and_LIT_grand_duchy_ADJ:0 "ポーランド・リトアニア"
