AMR->FEA、黄ロシア共和国と緑ウクライナ共和国の国旗追加

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -13,6 +13,10 @@
  GREENRUSSIA_empire_DEF:0 "緑ロシア帝国"
  GREENRUSSIA_empire_ADJ:0 "緑ロシア"
  
+ GREENUKRAINE_republic:0 "緑ウクライナ共和国"
+ GREENUKRAINE_republic_DEF:0 "緑ウクライナ共和国"
+ GREENUKRAINE_republic_ADJ:0 "緑ウクライナ"
+ 
  CHOSON_kingdom:0 "朝鮮王国"
  CHOSON_kingdom_DEF:0 "朝鮮王国"
  CHOSON_kingdom_ADJ:0 "朝鮮"
@@ -132,6 +136,10 @@
  TRANSCAUCASIAN_democratic_federative_republic:0 "トランスコーカサス民主連邦共和国"
  TRANSCAUCASIAN_democratic_federative_republic_DEF:0 "トランスコーカサス民主連邦共和国"
  TRANSCAUCASIAN_democratic_federative_republic_ADJ:0 "トランスコーカサス"
+ 
+ YELLOWRUSIA_republic:0 "黄ロシア共和国"
+ YELLOWRUSIA_republic_DEF:0 "黄ロシア共和国"
+ YELLOWRUSIA_republic_ADJ:0 "黄ロシア"
  
 #ヨーロッパ
  AUS-HUN_monarchy:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
@@ -370,9 +378,9 @@
  NETHERLANDS_united_kingdom_DEF:0 "ネーデルラント王国"
  NETHERLANDS_united_kingdom_ADJ:0 "オランダ"
  
- NEWRUSSIA_peoples_republics_union:0 "ノヴォロシア人民共和国連合"
- NEWRUSSIA_peoples_republics_union_DEF:0 "ノヴォロシア人民共和国連合"
- NEWRUSSIA_peoples_republics_union_ADJ:0 "ノヴォロシア"
+ NOVOROSSIYA_peoples_republics_union:0 "ノヴォロシア人民共和国連合"
+ NOVOROSSIYA_peoples_republics_union_DEF:0 "ノヴォロシア人民共和国連合"
+ NOVOROSSIYA_peoples_republics_union_ADJ:0 "ノヴォロシア"
  
  POL_kingdom_and_LIT_grand_duchy:0 "ポーランド王国及びリトアニア大公国"
  POL_kingdom_and_LIT_grand_duchy_DEF:0 "ポーランド王国及びリトアニア大公国"
