--- a/localisation/english/_geacps_parties_l_english.yml
+++ b/localisation/english/_geacps_parties_l_english.yml
@@ -75,13 +75,31 @@
  PARTY_sabah_house:0 "サバーハ家"
  PARTY_sabah_house_long:0 "サバーハ家"
  
+#MAN-満州
+ PARTY_manchukuo_concordia_association:0 "協和会"
+ PARTY_manchukuo_concordia_association_long:0 "満州国協和会"
+ 
+#MON-モンゴル
+ PARTY_menggu_political_council:0 "蒙古政務委員会"
+ PARTY_menggu_political_council_long:0 "蒙古政務委員会"
+ 
 #OMA-オマーン
  PARTY_busaid_house:0 "ブーサイード家"
  PARTY_busaid_house_long:0 "ブーサイード家"
  
+#SAU-サウジアラビア
+ PARTY_saud_house:0 "サウード家"
+ PARTY_saud_house_long:0 "サウード家"
+ 
 #SRW-サラワク
  PARTY_brooke_house:0 "ブルック家"
  PARTY_brooke_house_long:0 "ブルック家"
+ 
+#TWN-台湾
+ PARTY_imperial_service_association:0 "皇民奉公会"
+ PARTY_imperial_service_association_long:0 "皇民奉公会"
+ PARTY_taiwan_government-general:0 "台湾総督府"
+ PARTY_taiwan_government-general_long:0 "台湾総督府"
  
 ##ヨーロッパ
 #FRA-フランス
