--- a/localisation/replace/_geacps_core_l_english.yml
+++ b/localisation/replace/_geacps_core_l_english.yml
@@ -65,5 +65,8 @@
  debug_special_event_add:0 "SE変数の増加"
  debug_special_event_add:0 "SE変数の減少"
  
+#戦争名
+ WAR_NAME_JAP_CHI:0 "支那事変"
+ 
 #他
  POLITICS_LEADER:0 ""
