シチリア効果付け

--- a/localisation/english/geacps_SIC_l_english.yml
+++ b/localisation/english/geacps_SIC_l_english.yml
@@ -16,8 +16,8 @@
  SIC_Overcrowding_in_Naples_desc:0""
  SIC_Industrialization_in_Sicily:0"シチリアにおける工業化"
  SIC_Industrialization_in_Sicily_desc:0""
- SIC_Thorough_vocational_training:0"職業訓練の徹底"
- SIC_Thorough_vocational_training_desc:0""
+ SIC_Incorporation_of_dialects:0"方言の取り入れ"
+ SIC_Incorporation_of_dialects_desc:0""
  SIC_Industrial_Planning_in_Both_Sicilies:0"両シチリアの産業計画"
  SIC_Industrial_Planning_in_Both_Sicilies_desc:0""
  SIC_Outstrada_Operation:0"アウトストラーダの拡大"
@@ -64,10 +64,15 @@
  SIC_Mediterranean_Fleet_desc:0 ""
  
 #国民精神
- SIC_idea_1:0"伝統的な産業"
+ SIC_idea_Traditional_Industry:0"伝統的な産業"
+ SIC_idea_Traditional_Industry_desc:0 ""
+ SIC_idea_Mass_unemployment:0 "大量の失業者"
+ SIC_idea_Mass_unemployment_desc:0 ""
+ SIC_idea_Mass_unemployment_2:0 "失業者の救済"
+ SIC_idea_Mass_unemployment_2_desc:0 ""
+ SIC_idea_Tightening_Crackdowns:0 "取り締まりの強化"
+ SIC_idea_Tightening_Crackdowns_desc:0 ""
+ SIC_idea_Student_Support:0 "学生への支援"
+ SIC_idea_Student_Support_desc:0 ""
  
 #イベント
-#閣僚
-#特性
-#ツールチップ
-#flags
