パラグアイのステート実装

--- a/localisation/english/replace/_geacps_state_names_l_english.yml
+++ b/localisation/english/replace/_geacps_state_names_l_english.yml
@@ -507,7 +507,7 @@
  STATE_506:0 "ノルテ・グランデ"
  STATE_507:0 "ゾナ・アウストラル"
  STATE_508:0 "トゥクマン"
- STATE_509:0 "南方チャコ"
+ STATE_509:0 "チャコ南部"
  STATE_510:0 "中央地域"
  STATE_511:0 "メンドーサ"
  STATE_512:0 "パタゴニア"
@@ -686,7 +686,7 @@
  STATE_685:0 "パナマ運河地帯"
  STATE_686:0 "プエルトリコ"
  STATE_687:0 "ガイアナ"
- STATE_688:0 "西部地方"
+ STATE_688:0 "チャコ中部"
  STATE_689:0 "ジャマイカ"
  STATE_690:0 "バハマ北部"
  STATE_691:0 "トリニダード"
@@ -1309,3 +1309,10 @@
  STATE_1308:0 "晋北"
  STATE_1309:0 "察南"
  STATE_1310:0 "察哈爾"
+ STATE_1311:0 "フォルモサ"
+ STATE_1312:0 "ミシオネス西部"
+ STATE_1313:0 "ミシオネス東部"
+ STATE_1314:0 "チャコ南西部"
+ STATE_1315:0 "チャコ北西部"
+ STATE_1316:0 "チャコ北部"
+ STATE_1317:0 "ポンタ・ポーラン南部"
