--- a/localisation/english/_geacps_music_l_english.yml
+++ b/localisation/english/_geacps_music_l_english.yml
@@ -23,6 +23,7 @@
  JAP_music_album:0 "日本放送協会"
  Aiba_Shingunka:0 "愛馬進軍歌"
  Hotaru_No_Hikari:0 "蛍の光"
+ Indonesia_Raya:0 "インドネシア・ラヤ"
  Kigen_Nisen_Roppyaku_Nen:0 "紀元二千六百年"
  Kimigayo_Koshinkyoku:0 "君が代行進曲"
  Getu_Getu_Ka_Sui_Moku_Kin_Kin:0 "月月火水木金金"
