マルティニーク島

--- a/localisation/english/replace/_geacps_state_names_l_english.yml
+++ b/localisation/english/replace/_geacps_state_names_l_english.yml
@@ -1116,7 +1116,7 @@
  STATE_1115:0 "ソコトラ"
  STATE_1116:0 "セントルシア"
 #STATE_1117:0 ""
-#STATE_1118:0 ""
+ STATE_1118:0 "マルティニーク"
 #STATE_1119:0 ""
 #STATE_1120:0 ""
  STATE_1121:0 "ヘプ"	#独語: エーガー
