イタリア信託統治領ソマリア

--- a/localisation/english/geacps_GBR_l_english.yml
+++ b/localisation/english/geacps_GBR_l_english.yml
@@ -64,3 +64,9 @@
  GBR_from_the_cradle_to_the_grave:0 "ゆりかごから墓場まで"
  GBR_nationalisation_of_key_industries:0 "基幹産業の国有化"
  GBR_france-united_kingdom_relations:0 "英仏関係"
+ 
+#ディシジョン
+ GBR_delegation_of_sovereignty:0 "統治権の委譲"
+ GBR_delegation_of_sovereignty_desc:0 "統治権の委譲"
+ Delegation_of_sovereignty_in_Somalia:0 "ソマリアにおける統治権の委譲"
+ Delegation_of_sovereignty_in_Somalia_desc:0 "ソマリアにおける統治権の委譲"
