イタリア領汎用国旗の追加

--- a/localisation/english/countries_colony_l_english.yml
+++ b/localisation/english/countries_colony_l_english.yml
@@ -1179,8 +1179,8 @@
  SOM_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  SOM_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
  SOM_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- SOM_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$占領地域"
- SOM_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$占領地域"
+ SOM_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$地域"
+ SOM_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$地域"
  SOM_mandate_ADJ:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGYADJ$"
  
  SUD_dominion:0 "$NONIDEOLOGY$自治領"
