--- a/localisation/english/geacps_GBR_l_english.yml
+++ b/localisation/english/geacps_GBR_l_english.yml
@@ -67,6 +67,6 @@
  
 #ディシジョン
  GBR_delegation_of_sovereignty:0 "統治権の委譲"
- GBR_delegation_of_sovereignty_desc:0 "統治権の委譲"
+ GBR_delegation_of_sovereignty_desc:0 "勝者である我々は、幾つかの地域の統治権までの合意をしなかった。\nそこで旧支配者に統治権を一時的に委譲することで、この問題を後回し出来るであろう。"
  Delegation_of_sovereignty_in_Somalia:0 "ソマリアにおける統治権の委譲"
- Delegation_of_sovereignty_in_Somalia_desc:0 "ソマリアにおける統治権の委譲"
+ Delegation_of_sovereignty_in_Somalia_desc:0 "勝者である我々は、アフリカの辺境であるソマリアの統治権までの合意をしなかった。\nそこで旧支配者に統治権を一時的に委譲することで、この問題を後回し出来るであろう。"
