労働党ルートの実装

--- a/localisation/english/geacps_ARG_l_english.yml
+++ b/localisation/english/geacps_ARG_l_english.yml
@@ -46,4 +46,35 @@
  ARG_new_railway_network:0 "新規鉄道網の整備"
 
 #国民精神
+ ARG_oppression_of_dissenters:0 "反対者の弾圧"
+ ARG_eva_peron_foundation:0 "エバ・ペロン財団"
+ ARG_development_of_new_railway_network:0 "新規鉄道網の整備"
+ ARG_economic_independence:0 "経済的独立"
+ ARG_free_university:0 "無料の大学"
+ 
 #イベント
+ ARG.2.t:0 "2月選挙"
+ ARG.2.d:0 "前回は、ガブリエル・デル・マゾ氏が当選に大統領となったが、今回は国民の支持を得たフアン・ドミンゴ・ペロン大統領が注目を集めている。事前の国民調査でも圧倒的一番人気であり、選挙公約も支持を取り付けるには十分な物である。"
+ ARG.2.0:0 "無事に行えそうだ。"
+ ARG.2.1:0 "労働党の勝利を！"
+ ARG.2.2:0 "急進市民同盟の勝利を！"
+ ARG.3.t:0 "エバ・ペロン財団の設立"
+ ARG.3.d:0 "この財団は医療、貧困層、浮浪者の社会的救済を目的とした財団であり、社会復帰の難しい人々に衣食住を与え、職を与える。これにより多くの人々を救済されるだろう。"
+ ARG.3.0:0 "これにより多くの人々が救われる。"
+ ARG.4.t:0 "五ヵ年計画の発動"
+ ARG.4.d:0 "主な目的の1つは、アルゼンチンの経済的独立を達成することである。この計画は、輸出入に影響を与えた措置を統一する必要性を提起し、原材料、燃料、機械設備の適切な供給を確保し、国の産業と農業を合理的に発展させるために必要な投資の計画を確立するだろう。"
+ ARG.4.0:0 "より進歩を！"
+ ARG.5.t:0 "経済的独立宣言"
+ ARG.5.d:0 "1816年に我らが独立をして以来様々な国からの経済的介入を受けてきた。それは、鉄道や工場といった国民インフラに直結したものにもあった。今や我らはそれらの介入を受けず、世界と競争するほどの工業力と技術力を手に入れた。もはや、我らが戦うのは、我らに対する介入ではなく、世界との経済成長競争であろう。"
+ ARG.5.0:0 "これこそ真の独立である！"
+ ARG.6.t:0 "住宅建設への献金"
+ ARG.6.d:0 "この献金は国民の財産である住宅により多くの資金を与え、より多くの消費を刺激することにより経済を活性化することを目的としたものである。"
+ ARG.6.0:0 "経済はより活性化するな！"
+ ARG.7.t:0 "衛生問題"
+ ARG.7.d:0 "我が国の都市は衛生問題を古くから抱えており、それによる病気の蔓延などの恐怖と長く戦ってきた。我々はここでそれに対して終止符を打ち、未来永劫永久に衛生問題に悩まされぬようにすべきだ！"
+ ARG.7.0:0 "国民安全の為に"
+ 
+#フラグ
+ ARG_labour_party_win_1946:0 "1946年総選挙で労働党が勝利している"
+ ARG_emergency_citizens_alliance_win_1946:0 "1946年総選挙で急進市民同盟が勝利している"
+ 
