--- a/localisation/english/geacps_ARG_l_english.yml
+++ b/localisation/english/geacps_ARG_l_english.yml
@@ -30,8 +30,8 @@
  ARG_free_university:0 "大学の無料化"
  ARG_emergency_citizens_alliance:0 "急進市民同盟"
  ARG_transition_to_a_fairer_society:0 "公平社会への移行"
- ARG_cooperation_with_the_commonwealth:0 "英連邦との協力"
- ARG_approached_to_join_the_commonwealth:0 "英連邦への加盟を打診"
+ ARG_cooperation_with_GBR:0 "[GBR.GetAdjective]との協力"
+ ARG_approached_to_join_GBR_faction:0 "[GBR.GetFactionName]への加盟を打診"
  ARG_suburban_industrial_park_developments:0 "郊外の工業団地開発"
  ARG_further_development_of_heavy_industry:0 "重工業の更なる発展"
  ARG_somisa_established:0 "Somisaの設立"
@@ -51,6 +51,9 @@
  ARG_development_of_new_railway_network:0 "新規鉄道網の整備"
  ARG_economic_independence:0 "経済的独立"
  ARG_free_university:0 "無料の大学"
+ ARG_defense_bloc_0:0 "国防圏"
+ ARG_defense_bloc_1:0 "国防圏"
+ ARG_industrias_mecanicas_del_estado:0 "国家機械産業"
  
 #イベント
  ARG.2.t:0 "2月選挙"
@@ -62,7 +65,7 @@
  ARG.3.d:0 "この財団は医療、貧困層、浮浪者の社会的救済を目的とした財団であり、社会復帰の難しい人々に衣食住を与え、職を与える。これにより多くの人々を救済されるだろう。"
  ARG.3.0:0 "これにより多くの人々が救われる。"
  ARG.4.t:0 "五ヵ年計画の発動"
- ARG.4.d:0 "主な目的の1つは、アルゼンチンの経済的独立を達成することである。この計画は、輸出入に影響を与えた措置を統一する必要性を提起し、原材料、燃料、機械設備の適切な供給を確保し、国の産業と農業を合理的に発展させるために必要な投資の計画を確立するだろう。"
+ ARG.4.d:0 "主な目的の1つは、我が国の経済的独立を達成することである。この計画は、輸出入に影響を与えた措置を統一する必要性を提起し、原材料、燃料、機械設備の適切な供給を確保し、国の産業と農業を合理的に発展させるために必要な投資の計画を確立するだろう。"
  ARG.4.0:0 "より進歩を！"
  ARG.5.t:0 "経済的独立宣言"
  ARG.5.d:0 "1816年に我らが独立をして以来様々な国からの経済的介入を受けてきた。それは、鉄道や工場といった国民インフラに直結したものにもあった。今や我らはそれらの介入を受けず、世界と競争するほどの工業力と技術力を手に入れた。もはや、我らが戦うのは、我らに対する介入ではなく、世界との経済成長競争であろう。"
