軍事ツリー

--- a/localisation/english/geacps_ARG_l_english.yml
+++ b/localisation/english/geacps_ARG_l_english.yml
@@ -54,6 +54,7 @@
  ARG_defense_bloc_0:0 "国防圏"
  ARG_defense_bloc_1:0 "国防圏"
  ARG_industrias_mecanicas_del_estado:0 "国家機械産業"
+ ARG_rudels_guidance:0 "ルーデルの指導"
  
 #イベント
  ARG.2.t:0 "2月選挙"
