--- a/localisation/english/geacps_ARG_l_english.yml
+++ b/localisation/english/geacps_ARG_l_english.yml
@@ -10,7 +10,7 @@
  ARG_improved_support_equipment:0 "支援装備の充実化"
  ARG_antiarmour_equipment:0 "対装甲兵器用装備"
  ARG_air_force_realignment:0 "空軍再建"
- ARG_rudel_to_our_country:0 "ルーデルを我が国に"
+ ARG_german_military_officer_in_exile_to_our_country:0 "亡命ドイツ軍人を我が国に"
  ARG_pilot_training:0 "パイロット訓練"
  ARG_february_election:0 "2月選挙"
  ARG_labour_party:0 "労働党"
@@ -77,8 +77,17 @@
  ARG.7.t:0 "衛生問題"
  ARG.7.d:0 "我が国の都市は衛生問題を古くから抱えており、それによる病気の蔓延などの恐怖と長く戦ってきた。我々はここでそれに対して終止符を打ち、未来永劫永久に衛生問題に悩まされぬようにすべきだ！"
  ARG.7.0:0 "国民安全の為に"
+ ARG.8.t:0 "亡命ドイツ人を我が国に"
+ ARG.8.d:0 "1945年にドイツが降伏し、多くのドイツ軍兵士が南米などの中立国に逃亡した。我が国は、ドイツ人の偉大な技術力を亡命させ、利用することによって国家はより強化できると考えている。"
+ ARG.8.0:0 "彼らが来てくれることを願おう"
  
 #フラグ
  ARG_labour_party_win_1946:0 "1946年総選挙で労働党が勝利している"
  ARG_emergency_citizens_alliance_win_1946:0 "1946年総選挙で急進市民同盟が勝利している"
+ ARG_rudel_in_exile_flag:0 "ルーデルがアルゼンチンに亡命している"
  
+#ツールチップ
+ ARG_labour_party_win:0 "労働党が勝利する"
+ ARG_emergency_citizens_alliance_win:0 "急進市民同盟が勝利する"
+ ARG_general_election_1946:0 "1946年2月24日である"
+ ARG_german_military_officer_in_exile:0 "ドイツ軍人がアルゼンチンに亡命"
